--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 
    <meta charset="utf-8">
-	<title>Woo - Free Responsive HTML5/CSS3 Template</title>
+	<title>Art</title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
 
