--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@
           <div class="col-sm-4 pricing-container wow fadeInUp" data-wow-delay="1.3s">
             <br />
             <ul class="list-unstyled pricing-table text-center">
-    					<li class="headline"><h5 class="white">вТут что то надо придумать</h5></li>
-    					<li class="price"><div class="amount">$24<small></small></div></li>
-    					<li class="info">ацфцфцфцфц
-                <p>dsa</p></li>
+    					<li class="headline"><h5 class="white">Многостраничный сайт </h5></li>
+    					<li class="price"><div class="amount">500₽/стр | 7.5$/стр <small></small></div></li>
+    					<li class="info">Любой сайт
+                <p> </p></li>
 
     					<li class="features last btn btn-secondary btn-wide"><a href="https://vk.com/web_store_rus">Заказать
     				</ul>
