--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
   <meta name="keywords" content="">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  
+
+
+  <meta name="yandex-verification" content="012fe5613b0e4127" />
+  <meta name="google-site-verification" content="vcvtwL6mnw3In1NwYhIwDiNOyhVeKl13fGia9Msbbzk" />
+
   <meta property="og:title" content="">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="">
