--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
   <meta name="yandex-verification" content="012fe5613b0e4127" />
   <meta name="google-site-verification" content="vcvtwL6mnw3In1NwYhIwDiNOyhVeKl13fGia9Msbbzk" />
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-131754977-1"></script> 
+<script> 
+window.dataLayer = window.dataLayer || []; 
+function gtag(){dataLayer.push(arguments);} 
+gtag('js', new Date()); 
+
+gtag('config', 'UA-131754977-1'); 
+</script>
   <meta property="og:title" content="">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="">
