--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ gtag('config', 'UA-131754977-1');
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <button class="button button5">О нас</button>
+            <li><a href="#be-the-first">О нас</a></li>
             <li><a href="#invite">Заказать</a></li>
           </ul>
         </div>
