--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-
+  <meta name = "description" content = "Вам нужен качественный сайт за минимальную цену? Вы попали по адресу! Только у нас самые дешёвые и оптимальные сайты">
   <meta name="yandex-verification" content="012fe5613b0e4127" />
   <meta name="google-site-verification" content="vcvtwL6mnw3In1NwYhIwDiNOyhVeKl13fGia9Msbbzk" />
 
