--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@ gtag('config', 'UA-131754977-1');
               <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
                 <div class="row">
                   <div class="col-xs-6 text-right wow fadeInUp" data-wow-delay="1s">
-                    <a style="margin-left: 240px;" href="#be-the-first" class="button">Узнать больше</a>
+                    <a  href="#be-the-first" class="button2">Узнать больше</a>
                   </div>
                   <div class="col-xs-6 text-left wow fadeInUp" data-wow-delay="1.4s">
-                    <a style="width: 200px;" href="#pricing" class="button2">Заказать</a>
+                    <a  href="#pricing" class="button">Заказать</a>
                   </div>
                 </div>
               </div>
@@ -213,6 +213,10 @@ gtag('config', 'UA-131754977-1');
     					<li class="headline"><h5 class="white">Landing page</h5></li>
     					<li class="price"><div class="amount">₽4000/$57<small></small></div></li>
     					<li class="info">Landing page дословно переводится с английского: «целевая» или «посадочная страница».</li>
+              <li class="info">3 дня + (зависит от сложности сайта)</li>
+              <li class="features first">Индивидуалный дизайн</li>
+              <li class="features">Оплата после ролучения сайт</li>
+              <li class="features">Учитываем ваши пожелании</li>
     					<li class="features last btn btn-secondary btn-wide"><a style="width: 20px;" href="https://vk.com/web_store_rus" class="button3">Заказать</a></li>
     				</ul>
           </div>
@@ -220,9 +224,12 @@ gtag('config', 'UA-131754977-1');
           <div class="col-sm-4 pricing-container wow fadeInUp" data-wow-delay="0.4s">
             <ul class="list-unstyled pricing-table active text-center">
     					<li class="headline"><h5 class="white">Интернет магазин</h5></li>
-    					<li class="price"><div class="amount">₽8000/$114<small></small></div></li>
+    					<li class="price"><div class="amount">₽8000/$114<small><font size="-1"><p>Зависит от колличества товаров</p></font></small></div></li>
     					<li class="info">Красивый  интернет - магазин для вас (Цена может варьироваться от количества страниц на сайте)</li>  
-
+              <li class="info">3 дня + (зависит от сложности сайта)</li>
+              <li class="features first">Индивидуалный дизайн</li>
+              <li class="features">Оплата после ролучения сайт</li>
+              <li class="features">Учитываем ваши пожелании</li>
     					<li class="features last btn btn-secondary btn-wide"><a style="width: 20px;" href="https://vk.com/web_store_rus" class="button3">Заказать</a></li>
     				</ul>
           </div>
@@ -234,7 +241,10 @@ gtag('config', 'UA-131754977-1');
     					<li class="price"><div class="amount">500₽/стр | 7.5$/стр <small><font size="-1"> Начальная цена без страниц:4000 рублей </font></small></div></li>
     					<li class="info">Любой сайт
                 <p> </p></li>
-
+              <li class="info">3 дня + (зависит от сложности сайта)</li>
+              <li class="features first">Индивидуалный дизайн</li>
+              <li class="features">Оплата после ролучения сайт</li>
+              <li class="features">Учитываем ваши пожелании</li>
     					<li class="features last btn btn-secondary btn-wide"><a style="width: 20px;" href="https://vk.com/web_store_rus" class="button3">Заказать</a>  
     				</ul>
           </div>
